--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
     "ngx-owl-carousel-o": "^2.0.3",
+    "ngx-scroll-event": "^1.0.8",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "scrollmagic": "^2.0.7",
