pusing all code

--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "bootstrap": "^4.4.1",
     "imports-loader": "^0.8.0",
     "jquery": "^3.4.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-owl-carousel-o": "^2.0.3",
     "ngx-scroll-event": "^1.0.8",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "scrollmagic": "^2.0.7",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^9.10.6",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
